# academicOps

./: .dockerignore  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  20251226-writing-3bec9e91-show-prompts-stored-abridged.md  20251226-writing-3bec9e91-show-prompts-stored-full.md  ACCOMMODATIONS.md  AGENTS.md  ARCHITECTURE.md  AXIOMS.md  BMEM-ARCHITECTURE.md  BMEM-CLAUDE-GUIDE.md  BMEM-FORMAT.md  BMEM-OBSIDIAN-GUIDE.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CORE.md  CUSTODIET-EVIDENCE.md  Dockerfile  FLOW.md  FRAMEWORK-PATHS.md  FRAMEWORK.md  GEMINI.md  HEURISTICS.md  INDEX.md  INSTALL.md  INSTALLATION-GUIDE.md  INSTRUCTIONS.md  LICENSE  METHODOLOGY.md  MIGRATION-BMEM.md  MIGRATION-STATUS.md  Makefile  PLAN.md  README.md  REMINDERS.md  (+45 more)
.agent/: AGENT.md  AGENTS.md  CORE.md  GEMINI.md  PATHS.md  STATUS.md  agent.md  context-map.json  debug-subagents.md  project-context.md
.aops/: test_subagent.txt
.beads/: bd.sock.startlock  beads.left.jsonl  beads.left.meta.json  config.yaml  daemon.pid  issues.jsonl  issues.jsonl.backup.20260118144634  last-touched  sync-state.json  sync_base.jsonl
.claude/: CLAUDE.md  agents  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude.disabled/: settings.local.json
.gemini/: WORKFLOW-MODE-CRITICAL.md  sandbox.Dockerfile  settings.json  settings.json.disabled
.github/: copilot-instructions.md  pull_request_template.md
.markdownlint-rules/: no-horizontal-rules.js
agents/: ANALYST.md  CODE.md  DBT.md  DEV.md  DEVELOPER.md  E2E-TESTING.md  FAIL-FAST.md  GIT-WORKFLOW.md  HYDRA.md  INSTRUCTIONS.md  REVIEW.md  STRATEGIST.md  SUPERVISOR.md  TEST-CLEANER.md  TESTS.md  TRAINER.md  _CORE.md  academic_writer.md  advocate.md  agents.md  analyst.md  base.md  bmem-validator.md  compliance-auditor.md  critic.md  custodiet.md  default.md  dev.md  developer.md  documenter.md  effectual-planner.md  email-extractor.md  end-of-session.md  hypervisor.md  intent-router.md  log-agent.md  planner.md  prompt-hydrator.md  prompt-writer.md  scribe.md  (+5 more)
aops-core/: .mcp.json  .mcp.json.template  AXIOMS.md  CONSTRAINTS.md  FLOW.md  GEMINI.md  GLOSSARY.md  HEURISTICS.md  HYDRATION_GATE_TEST_REPORT.md  INSTALLATION.md  LIFECYCLE-HOOKS.md  REMINDERS.md  RULES.md  SCRIPTS.md  SKILLS.md  TASK_FORMAT_GUIDE.md  TAXONOMY.md  TOOLS.md  WORKERS.md  WORKFLOWS.md  agent-env-map.conf  aops-core  gemini-extension.json  hooks.json  mcp.json.template
aops-tools/: .mcp.json  .mcp.json.template  README.md  aops-tools  mcp.json.template
archived/: AXIOMS.md  HEURISTICS.md
axioms/: acceptance-criteria-own-success.md  always-cite-sources.md  always-dogfooding.md  categorical-imperative.md  current-state-machine.md  data-boundaries.md  do-one-thing.md  dont-make-shit-up.md  dry-modular-explicit.md  fail-fast-agents.md  fail-fast-code.md  feedback-loops-for-uncertainty.md  just-in-time-context.md  maintain-relational-integrity.md  minimal-instructions.md  no-excuses.md  no-other-truths.md  no-workarounds.md  nothing-is-someone-elses-responsibility.md  one-spec-per-feature.md  plan-first-development.md  project-independence.md  research-data-immutable.md  self-documenting.md  single-purpose-files.md  skills-are-read-only.md  trust-version-control.md  use-standard-tools.md  verify-first.md  write-for-long-term.md
bots/: CLAUDE.md
chunks/: AGENT-BEHAVIOR.md  AXIOMS.md  INFRASTRUCTURE.md  SKILL-PRIMER.md
commands/: STRATEGIST.md  add.md  advocate.md  analyst.md  analyze-session.md  analyze-sessions.md  aops.md  archive-extract.md  audit-framework.md  audit.md  batch-convert.md  bmem-save.md  bmem-validate.md  bmem.md  bootstrap-session.sh  check-policy.sh  cleanup.md  commands.md  consolidate.md  convert-to-md.md  dev.md  diag.md  do.md  docs-update.md  email.md  encode.md  err.md  error.md  learn.md  log-failure.md  log.md  meta.md  next.md  ops.md  parallel-batch.md  pull.md  q.md  qa.md  reflect.md  review-training-cmd.md  (+9 more)
config/: .mcp.json  capabilities.md  grafana-claude-debug.json  mcp.json  paths.py  paths.sh  settings.json  workflows.md
core/: DEBUGGING.md  DEVELOPMENT.md  INSTRUCTIONS.md  STYLE.md  TESTING.md  _CORE.md  fail-fast.md
docs/: ACCEPTANCE_TESTING.md  ACCOMMODATIONS.md  AGENT-INSTRUCTION-MAP.md  AGENT-INSTRUCTIONS.md  AGENT-TRAINER-PROMPT.md  ARCHITECTURE.md  AUDIT.md  AUTO-EXTRACTION.md  AXIOMS.md  CLAUDE_MD_GUIDE.md  CORE.md  CROSS_CUTTING_CONCERNS.md  CROSS_REPO_HOOKS.md  DATA-ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_MAINTENANCE.md  EMAIL.md  ENFORCEMENT.md  EXPLORATION-BEFORE-IMPLEMENTATION.md  HOOKS.md  IMPACT-ANALYSIS.md  INDEX.md  INSTRUCTION-INDEX.md  INSTRUCTIONS.md  JIT-INJECTION.md  MIGRATION-2025-01.md  OBSERVABILITY.md  OMCP-EMAIL.md  PATH-RESOLUTION.md  QUARTERLY-FOCUS.md  README.md  SETUP.md  STRATEGY.md  STYLE-QUICK.md  STYLE.md  TECHSTACK.md  TESTING.md  TEST_PLAN.md  TRAINER.md  (+29 more)
example/: ACCOMMODATIONS.md  KNOWLEDGE.md  STYLE-QUICK.md  STYLE.md
experiments/: 2025-10-17_validate-env-flat-arch.md  2025-10-18_trainer-role-violation.md  2025-10-19_supervisor-no-excuses-violation.md  2025-10-19_supervisor-testcleaner-chain.md  2025-10-20_failed-to-answer-direct-question.md  2025-10-21_agent-creates-new-file-instead-of-editing.md  2025-10-22_supervisor-never-declare-success-with-failing-tests.md  2025-10-24_accomplishments-boundary.md  2025-10-24_aops-bug-scope-boundaries.md  2025-10-24_skills-first-architecture.md  2025-10-24_task-process-regex-fix.md  2025-10-26_canonical-settings-symlink.md  2025-10-27_tja-context-loading.md  2025-10-29_supervisor-multi-stage-quality-gates.md  2025-10-30_scribe-detail-balance.md  2025-10-30_supervisor-tight-orchestration.md  2025-10-30_supervisor-tool-restrictions.md  2025-10-30_task-manager-agent-creation.md  2025-10-31_dev-command-supervisor-invocation.md  2025-10-31_hook-path-resolution.md  2025-10-31_ops-command-performance.md  2025-11-01_stop-hook-circuit-breaker.md  (+36 more)
lib/fast-indexer/: Cargo.toml  README.md
lib/fast-indexer/examples/: pre-commit
lib/fast-indexer/src/: main.rs
(+2136 files in other folders)
