[project]
name = "academicops"
dynamic = ["version"]
description = "Academic Operations Framework"
requires-python = ">=3.11"
dependencies = [
  # Core runtime
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "fastmcp>=2.13.1",
  "filelock>=3.13.0",
  "click>=8.1.0",
  "rich>=13.0.0",
  "psutil>=5.9.0",
  # Skills dependencies
  "pdfminer-six>=20260107",
  "python-ntfy>=0.1.0",
  "streamlit>=1.54.0",
  "scipy>=1.17.0",
  "bump-my-version[dev]>=1.2.6",
  "networkx>=3.6.1",
  "ogdf-python>=0.3.4",
  "cppyy>=3.5.0",
]

[project.optional-dependencies]
# Visualization tools (streamlit dashboard, graph visualization)
viz = [
  "streamlit>=1.28.0",
  "streamlit-agraph>=0.0.45",
  "networkx>=3.6",
  "matplotlib>=3.10.8",
]
# Anthropic API for skills that call Claude directly
anthropic = ["anthropic>=0.75.0"]


[tool.hatch.build.targets.wheel]
packages = ["lib", "skills", "tests", "scripts"]

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[dependency-groups]
dev = [
  # Testing
  "pytest>=8.0.0",
  "pytest-xdist>=3.8.0",
  "pytest-cov>=7.0.0",
  "pytest-timeout>=2.4.0",
  # Linting & type checking
  "basedpyright>=1.29.0",
  "ruff>=0.14.10",
  # Git hooks
  "pre-commit>=4.5.1",
  "bump-my-version>=1.2.6",
  "dprint-py>=0.51.1.0",
]

# ---- Settings ----
[tool.ruff]
# Set as desired, typically 88 (black standard) or 100 (wide).
line-length = 100

[tool.ruff.lint]
select = [
  # See: https://docs.astral.sh/ruff/rules/
  # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
  "E", # https://docs.astral.sh/ruff/rules/#error-e
  "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "I", # https://docs.astral.sh/ruff/rules/#isort-i
  # Other possibilities:
  # "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  # "Q", # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
  # "COM", # https://docs.astral.sh/ruff/rules/#flake8-commas-com
  # "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
]
ignore = [
  # Disable some rules that are overly pedantic. Add/remove as desired:
  "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
  "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
  "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
  # We use both ruff formatter and linter so some rules should always be disabled.
  # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
  "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
  "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
  "E117", # https://docs.astral.sh/ruff/rules/over-indented/
  "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
  "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
  "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
  "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
  "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
  "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
  "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
  "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
  "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.basedpyright]
# Exclude archived files from type checking - they are legacy code kept for reference
exclude = [
  "archived/",
  "tests/",
  "**/__pycache__",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/build",
  "**/dist",
  "**/.venv",
  "**/venv",
]
ignore = ["**/site-packages"]
venv = ".venv"
# Use basic mode for gradual adoption - standard is too strict initially
typeCheckingMode = "basic"
# Python path for internal imports
extraPaths = ["aops-core", "aops-core/hooks", "aops-core/lib"]
# By default BasedPyright is very strict, so you almost certainly want to disable
# some of the rules.
# First, these turn off warnings about (yes) how you ignore warnings:
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
# A few typically noisy warnings are next.
# How many you enable is up to you. The first few are off by default, but you can
# comment/uncomment these as desired:
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false
# Ignore missing imports for third-party packages without stubs
reportMissingImports = false
reportMissingTypeStubs = false

# reportPrivateImportUsage = false
# reportPrivateLocalImportUsage = false
# reportMissingImports = false
# reportUnnecessaryIsInstance = false
# reportUnknownVariableType = false
# reportUnknownArgumentType = false
[tool.pytest.ini_options]
testpaths = ["tests", "aops-core/tests"]
pythonpath = [".", "aops-core", "aops-core/hooks", "aops-core/lib", "lib/overwhelm"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-n 16 -m 'not slow'"
markers = [
  "slow: marks tests as slow (run with '-m slow')",
  "integration: marks tests as integration tests",
  "metrics: observability tests that report metrics (run with '-m metrics')",
  "demo: demo tests showing real behavior (run with '-k demo -v -s -n 0')",
  "requires_local_env: marks tests that require a local environment/history (skipped in CI)",
]
