[package]
name = "fast-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
gray_matter = "0.2"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
